Fix few alignment issues

--- a/src/app/shared/components/configuration/advanced-settings/advanced-settings.component.scss
+++ b/src/app/shared/components/configuration/advanced-settings/advanced-settings.component.scss
@@ -47,28 +47,3 @@
 .cdk-drag-animating {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
-
-:host {
-  .mat-slide-toggle {
-    &.mat-checked {
-      ::ng-deep.mat-slide-toggle-bar::after {
-        content: 'Yes';
-        font-size: 75%;
-        color: #FFFFFF;
-        position: absolute;
-        left: 8px;
-        top: -1px;
-      }
-    }
-    &:not(.mat-checked) {
-      ::ng-deep.mat-slide-toggle-bar::after {
-        content: 'No';
-        font-size: 75%;
-        color: #FFFFFF;
-        position: absolute;
-        left: 25px;
-        top: -2px;
-      }
-    }
-  }
-}
