--- a/src/app/shared/components/configuration/import-settings/import-settings.component.scss
+++ b/src/app/shared/components/configuration/import-settings/import-settings.component.scss
@@ -73,6 +73,11 @@
     padding-right: 175px;
   }
 
+  &--field-label-section {
+    width: 650px;
+    padding-right: 46px;
+  }
+
   &--create-custom-field {
     padding: 8px 0px;
   }
