--- a/src/styles.scss
+++ b/src/styles.scss
@@ -275,7 +275,7 @@ h3, h4, h5, h6 {
   }
 
   &--field-label-section {
-    width: 650px;
+    max-width: 650px;
     padding-right: 46px;
   }
 
